Several small changes - Fixed sandstorm bug and changed toString of Player - Added automatic role addition - Added colors to logging

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -2,13 +2,13 @@
 # Set to debug or trace if log4j initialization is failing
 status = warn
 # Name of the configuration
-name = ConsoleLogConfigDemo
+name=EmolgaConfig
 
 # Console appender configuration
 appender.console.type = Console
 appender.console.name = consoleLogger
-appender.console.layout.type = PatternLayout
-appender.console.layout.pattern = [%t] %d{HH:mm:ss} %-5p%c{1} - %m%n
+appender.console.layout.type=PatternLayout
+appender.console.layout.pattern=%highlight{[%t] %d{HH:mm:ss} %p %logger{1} - %m%n}{FATAL=red, ERROR=red, WARN=yellow, INFO=white, DEBUG=green, TRACE=cyan}
 
 # Root logger level
 rootLogger.level = info
