--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -8,7 +8,7 @@ name=EmolgaConfig
 appender.console.type = Console
 appender.console.name = consoleLogger
 appender.console.layout.type=PatternLayout
-appender.console.layout.pattern=%highlight{[%t] %d{HH:mm:ss} %-5p %logger{1} - %m%n}{FATAL=red, ERROR=red, WARN=yellow, INFO=white, DEBUG=green, TRACE=cyan}
+appender.console.layout.pattern=%highlight{[%t] %d{HH:mm:ss} %p %logger{1} - %m%n}{FATAL=red, ERROR=red, WARN=yellow, INFO=white, DEBUG=green, TRACE=cyan}
 
 # Root logger level
 rootLogger.level = info
