--- a/build.gradle
+++ b/build.gradle
@@ -42,12 +42,9 @@ shadowJar {
     }
 }
 
+
 dependencies {
-    implementation ('org.slf4j:slf4j-api:1.7.33') {
-        version {
-            strictly('2.0.0-alpha5')
-        }
-    }
+    implementation ('org.slf4j:slf4j-api:2.0.0-alpha7-SNAPSHOT')
     implementation 'org.eclipse.jetty:jetty-server:11.0.7'
     implementation 'org.eclipse.jetty:jetty-util:11.0.7'
     implementation 'com.google.oauth-client:google-oauth-client-jetty:1.32.1'
@@ -58,9 +55,7 @@ dependencies {
     implementation 'com.sedmelluq:lavaplayer:1.3.75'
     //implementation 'org.slf4j:slf4j-simple:1.7.32'
 
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.17.1'
-    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.17.1'
-    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.17.1'
+    implementation 'ch.qos.logback:logback-classic:1.3.0-alpha12'
     implementation 'mysql:mysql-connector-java:8.0.27'
     implementation 'jakarta.xml.bind:jakarta.xml.bind-api:3.0.1'
     implementation 'org.glassfish.jaxb:jaxb-runtime:3.0.1'
