--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,7 @@ shadowJar {
     archiveBaseName.set('Bots')
     archiveClassifier.set('')
     archiveVersion.set('')
-    destinationDirectory.set(new File("C:\\Users\\Florian\\Desktop\\JARVIS und co"))
+    destinationDirectory.set(new File("C:\\Users\\Florian\\Desktop\\IntelliJ\\Emolga"))
     manifest {
         attributes "Main-Class": "de.tectoast.emolga.Main"
     }
@@ -44,21 +44,21 @@ shadowJar {
 
 
 dependencies {
-    implementation ('org.slf4j:slf4j-api:2.0.0-alpha7-SNAPSHOT')
-    implementation 'org.eclipse.jetty:jetty-server:11.0.7'
-    implementation 'org.eclipse.jetty:jetty-util:11.0.7'
-    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.33.0'
+    implementation('org.slf4j:slf4j-api:2.0.0-alpha7-SNAPSHOT')
+    implementation 'org.eclipse.jetty:jetty-server:11.0.8'
+    implementation 'org.eclipse.jetty:jetty-util:11.0.8'
+    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.33.1'
     implementation 'com.google.apis:google-api-services-docs:v1-rev20210707-1.32.1'
-    implementation 'com.google.apis:google-api-services-sheets:v4-rev20210629-1.32.1'
-    implementation 'com.google.apis:google-api-services-youtube:v3-rev20210915-1.32.1'
+    implementation 'com.google.apis:google-api-services-sheets:v4-rev20220221-1.32.1'
+    implementation 'com.google.apis:google-api-services-youtube:v3-rev20220227-1.32.1'
     implementation 'org.jsoup:jsoup:1.14.3'
     implementation 'com.sedmelluq:lavaplayer:1.3.75'
     //implementation 'org.slf4j:slf4j-simple:1.7.32'
 
     implementation 'ch.qos.logback:logback-classic:1.3.0-alpha12'
-    implementation 'mysql:mysql-connector-java:8.0.27'
+    implementation 'mysql:mysql-connector-java:8.0.28'
     implementation 'jakarta.xml.bind:jakarta.xml.bind-api:3.0.1'
-    implementation 'org.glassfish.jaxb:jaxb-runtime:3.0.1'
+    implementation 'org.glassfish.jaxb:jaxb-runtime:3.0.2'
     implementation files("./lib/json-java-olf.jar")
     implementation files("./lib/Toastilities.jar")
     implementation("net.dv8tion:JDA:4.4.0_350")
