--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,7 @@ shadowJar {
 }
 
 dependencies {
-    implementation('org.slf4j:slf4j-api:2.0.0-alpha7')
+    implementation 'org.slf4j:slf4j-api:2.0.0-alpha7'
     implementation 'org.eclipse.jetty:jetty-server:11.0.9'
     implementation 'org.eclipse.jetty:jetty-util:11.0.9'
     implementation 'com.google.oauth-client:google-oauth-client-jetty:1.34.1'
@@ -59,10 +59,12 @@ dependencies {
     //implementation 'org.slf4j:slf4j-simple:1.7.32'
 
     implementation 'ch.qos.logback:logback-classic:1.3.0-alpha16'
-    implementation 'mysql:mysql-connector-java:8.0.29'
+    //implementation 'mysql:mysql-connector-java:8.0.29'
     implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.0'
     implementation 'org.glassfish.jaxb:jaxb-runtime:4.0.0'
     implementation 'de.tectoast:toastilities:2.1'
     implementation 'de.tectoast:jsolf:1.2'
     implementation 'net.dv8tion:JDA:5.0.0-alpha.12'
+    //implementation 'com.zaxxer:HikariCP:5.0.1'
+    implementation 'org.mariadb.jdbc:mariadb-java-client:3.0.5'
 }
