refactor: clean up

--- a/build.gradle
+++ b/build.gradle
@@ -65,6 +65,6 @@ dependencies {
     implementation 'de.tectoast:toastilities:2.1'
     implementation 'de.tectoast:jsolf:1.2'
     implementation 'net.dv8tion:JDA:5.0.0-alpha.12'
-    //implementation 'com.zaxxer:HikariCP:5.0.1'
+    implementation 'com.zaxxer:HikariCP:5.0.1'
     implementation 'org.mariadb.jdbc:mariadb-java-client:3.0.5'
 }
